归寝检测完成

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,6 @@ spring.datasource.druid.pool-prepared-statements=true
 spring.datasource.druid.max-pool-prepared-statement-per-connection-size=20
 #mybatis
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
-mybatis.mapper-locations=classpath:mybatis/mapper/UserInfoFaceMapper.xml
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 logging.level.com.itboyst.facedemo.dao.mapper=debug
 
